Display fix for AS#175328444802917, Style feature picker based on new designs -- Fixed display of the SwitchButton. It was taking white space for the label even if label is not there.

--- a/components/SwitchButton/SwitchButton.scss
+++ b/components/SwitchButton/SwitchButton.scss
@@ -2,16 +2,15 @@
 
 .SwitchButton {
   position: relative;
+  display: flex;
   .label{
     width: 92px;
     line-height: 30px;
     font-size: 12px;
     @include roboto;
     color: $tc-gray-60;
-    float: left;
   }
   label{
-    float: left;
     margin: 0;
     padding: 0;
     display: block;
@@ -43,7 +42,6 @@
     margin: 0;
     padding: 0;
     background: $tc-gray-40;
-    float: left;
     &:before {
       content: "";
       position: absolute;
